--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "seyon-ui",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "10.0.0"
+  }
   "scripts": {
     "ng": "ng",
     "start": "node ./bin/www",
