--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "file-saver":"~2.0.0-rc.4",
-    "xlsx":"~0.14.0"
+    "file-saver": "~2.0.0-rc.4",
+    "xlsx": "~0.14.0"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
