--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
+    "chart.js": "^2.8.0",
     "cookie-parser": "~1.4.3",
+    "core-js": "^2.4.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "file-saver": "~2.0.0-rc.4",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "file-saver": "~2.0.0-rc.4",
-    "xlsx": "~0.14.0"
+    "ng2-charts": "^1.6.0",
+    "rxjs": "^5.5.6",
+    "xlsx": "~0.14.0",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
