--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/compiler": "^9.1.3",
     "@angular/core": "^9.1.3",
     "@angular/forms": "^9.1.3",
-    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^9.1.3",
     "@angular/platform-browser-dynamic": "^9.1.3",
     "@angular/router": "^9.1.3",
@@ -35,18 +34,20 @@
     "morgan": "~1.10.0",
     "ng2-charts": "^2.3.0",
     "rxjs": "^6.5.5",
+    "tslib": "^1.10.0",
     "xlsx": "~0.15.6",
-    "zone.js": "^0.10.3",
+    "zone.js": "~0.10.2",
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.901.3",
     "@angular/cli": "^9.1.3",
     "@angular/compiler-cli": "^9.1.3",
     "@angular/language-service": "^9.1.3",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~13.13.4",
-    "codelyzer": "^5.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
     "karma": "~5.0.2",
