--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "http-errors": "~1.7.3",
     "jade": "~1.11.0",
     "morgan": "~1.10.0",
-    "ng2-charts": "^2.3.0",
     "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.10.0",
+    "underscore": "^1.10.2",
     "xlsx": "~0.15.6",
-    "zone.js": "~0.10.2",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.3",
