--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-errors": "~1.7.3",
     "jade": "~1.11.0",
     "morgan": "~1.10.0",
+    "ng-cookie": "^1.0.8",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.10.0",
